plugins {
    alias(libs.plugins.android.library)
    alias(libs.plugins.hilt)
}

android {
    namespace = 'org.singularux.contacts.core.contacts'
    buildToolsVersion '36.1.0'
    compileSdk {
        version = release(36)
    }
    defaultConfig {
        minSdk 30
        consumerProguardFiles "consumer-rules.pro"
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
}

dependencies {
    // Project
    api(project ':core:permission')
    // AndroidX
    implementation libs.androidx.core
    // Hilt
    implementation libs.hilt.android
    annotationProcessor libs.hilt.compiler
    // Lombok
    compileOnly libs.lombok
    annotationProcessor libs.lombok
}